AER3-345 Extended yaml with some farm related methods
Not everything is implemented yet, but it's another step.
